# django-packaging-talk

./: Packaging.key  index.html  snippet.sh
example/: README.rst  setup.cfg  setup.py
example/foo/: __init__.py  real_stuff.py
snippets/: 1.py  10.py  11.py  12.py  13.py  14.py  15.ini  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.ini  23.py  24.ini  25.py  26.py  28.ini  28.rst  3.py  4.py  5.py  6.py  8.py  9.py
