[metadata]
name = foo
version = 0.0.1
description = Foo, Bar, Baz!
long_description = file: README.rst
keywords = foo, bar, baz
license = BSD 3-Clause License
author = My Self
author_email = foo@bar.com
url = https://github.com/myself/foo
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    Django==1.11.3
    psycopg2==2.7.1
    django-extended-choices==1.1.1

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.extras_require]
pdf = ReportLab>=1.2; RXP

[options.packages.find]
exclude =
    tests
